# clasangd

./: .gitignore  Cargo.toml  README.md  prelude.h  test.c
_src/: lsp_diagnosis.rs  lsp_io.rs
example/: crash.java  crash_java.txt  language.toml  runf.sh  test.c  watch_hx_log.sh
src/: log_parser.rs  lsp_diagnosis.rs  lsp_io.rs  lsp_mainloop.rs  main.rs
