[package]
name = "clasangd"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["slow_cat"]
description="clangd proxy that merged ASan diagnostics within single LSP"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
notify = "8.2.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
